# XmlSchemaValidator

./: .gitignore  CMakeLists.txt  QtConfigure.cmake
src/: CMakeLists.txt
src/console/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  gui.qrc  main.cpp  mainwindow.qml
src/lib/: CMakeLists.txt  MessageHandler.cpp  MessageHandler.h  XmlSchemaValidator.cpp  XmlSchemaValidator.h
test/unit/lib/: CMakeLists.txt  EventLoopHelper.cpp  EventLoopHelper.h  XmlSchemaValidatorTest.cpp  XmlSchemaValidatorTest.qrc  main.cpp
test/unit/lib/resources/: Invalid.xml  Schema.xsd  Valid.xml
